# FA_AA_A1_ImplementingSearch

./: .gitignore  CMakeLists.txt  benchmark_cpp_all.sh  benchmark_cpp_fmall.sh  benchmark_cpp_fmall_hg38.sh  benchmark_python_Fi.sh  benchmark_suffixarray.sh  catch_suffix.sh  parse_timev_logs.py
lib/seqan3/submodules/sdsl-lite/: .clang-format  .cmake-format.yaml  CMakeLists.txt  README.md
lib/seqan3/submodules/sdsl-lite/.github/workflows/: ci_asan.yml  ci_header.yml  ci_linux.yml  ci_macos.yml  lint.yml
lib/seqan3/submodules/sdsl-lite/test/: CMakeLists.txt
lib/seqan3/test/snippet/core/detail/: template_inspection_usage_2.cpp
results/: benchmark_cpp_all.csv  benchmark_python_all.csv
results_fi_hg38/: benchmark_fm.csv
results_fi_partial/: benchmark_fm.csv  benchmark_suffixarray.csv
src/: CMakeLists.txt  fmindex_construct.cpp  fmindex_pigeon_search.cpp  fmindex_search.cpp  implementing_search.py  naive_search.cpp  suffixarray_construct.cpp  suffixarray_search.cpp
src/old/: CMakeLists.txt  fmindex_construct.cpp  fmindex_pigeon_search.cpp  fmindex_search.cpp
